--- a/vignettes/penguinWings.Rmd
+++ b/vignettes/penguinWings.Rmd
@@ -56,7 +56,7 @@ uln_av <- (uln1@raw + uln2@raw + uln3@raw) / 3
 
 Prepare data blocks for analysis
 --------
-Each set of averaged landmarks can now be formatted into a data block with the `formatBlock` function. Here, we will use the *@curves* term from one of the replicates, and will set `gpa = TRUE` to perform generalised Procrustes transformation on the landmark configurations. Generalised Procrustes transformation is performed using `gpagen` from `geomorph` (Adams & Otárola-Castillo, 2013), which is called by `formatBlock`. 
+Each set of averaged landmarks can now be formatted into a data block with the `formatBlock` function. Here, we will use the *@curves* term from one of the replicates, and will set `gpa = TRUE` to perform generalised Procrustes transformation on the landmark configurations. Generalised Procrustes transformation is performed using `gpagen` from `geomorph` (Adams and Otarola-Castillo, 2013), which is called by `formatBlock`. 
 
 ``` {r}
 # Format the averaged landmark configurations into data blocks
@@ -80,7 +80,7 @@ blocklist <- combineBlocks(blocks = c(block1, block2, block3))
 
 Analyse list of blocks
 --------
-The scaled data blocks are analysed with regularised consensus principal component analysis (RCPCA) in mode 2 using the `rgcca` function from `RGCCA` (Tenenhaus & Guillemot, 2017), which is called by `analyseBlocks` when `option = "rcpca"`.
+The scaled data blocks are analysed with regularised consensus principal component analysis (RCPCA) in mode 2 using the `rgcca` function from `RGCCA` (Tenenhaus and Guillemot, 2017), which is called by `analyseBlocks` when `option = "rcpca"`.
 
 ``` {r}
 # Analyse the list of data blocks using RCPCA
@@ -138,19 +138,19 @@ knitr::kable(dat, caption = "Table 1. 3D digital replicas produced from bones of
 
 References
 --------
-* D. C. & Otárola-Castillo, E. (2013). Geomorph: An *R* package for the collection and analysis of geometric morphometric shape data. Methods in Ecology and Evolution, 4, 393–399. https://doi.org/10.1111/2041-210x.12035
+* Adams, D. C., Otarola-Castillo, E. (2013). Geomorph: An R package for the collection and analysis of geometric morphometric shape data. Methods in Ecology and Evolution, 4, 393–399. https://doi.org/10.1111/2041-210x.12035
 
-* Collyer, M. L., Davis, M. A. & Adams, D. C. (2020). Making heads or tails of combined landmark configurations in geometric morphometric data. Evolutionary Biology, 47, 193-205. https://doi.org/10.1007/s11692-020-09503-z
+* Collyer, M. L., Davis, M. A., Adams, D. C. (2020). Making heads or tails of combined landmark configurations in geometric morphometric data. Evolutionary Biology, 47, 193-205. https://doi.org/10.1007/s11692-020-09503-z
 
-* Ksepka, D. T. & Ando, T. (2011). Penguins past, present, and future: Trends in the evolution of the Sphenisciformes. In G. Dyke & G. Kaiser (Ed.), Living  Dinosaurs: The Evolutionary History of Modern Birds, First Edition (pp. 155–186). John Wiley & Sons.
+* Ksepka, D. T., Ando, T. (2011). Penguins past, present, and future: Trends in the evolution of the Sphenisciformes. In G. Dyke, G. Kaiser (Ed.), Living  Dinosaurs: The Evolutionary History of Modern Birds, First Edition (pp. 155–186). John Wiley and Sons.
 
-* Ksepka, D. T., Fordyce, R. E., Ando, T. & Jones, C. M. (2012). New fossil penguins (Aves, Sphenisciformes) from the Oligocene of New Zealand reveal the skeletal plan of stem penguins. Journal of Vertebrate Paleontology, 32, 235–254. https://doi.org/10.1080/02724634.2012.652051
+* Ksepka, D. T., Fordyce, R. E., Ando, T., Jones, C. M. (2012). New fossil penguins (Aves, Sphenisciformes) from the Oligocene of New Zealand reveal the skeletal plan of stem penguins. Journal of Vertebrate Paleontology, 32, 235–254. https://doi.org/10.1080/02724634.2012.652051
 
-* Schlager, S. (2017). Morpho and Rvcg – Shape Analysis in *R*. In G. Zheng, S. Li & G. Székely (Ed.), Statistical shape and deformation analysis (pp. 217-256). Academic Press.
+* Schlager, S. (2017). Morpho and Rvcg – Shape Analysis in R. In G. Zheng, S. Li and G. Székely (Ed.), Statistical shape and deformation analysis (pp. 217-256). Academic Press.
 
-* Slack, K. E., Jones, C. M., Ando, T., Harrison, G. L., Fordyce, R. E., Arnason, U. & Penny, D. (2006). Early penguin fossils, plus mitochondrial genomes, calibrate avian evolution. Molecular Biology and Evolution, 23, 1144–1155. https://doi.org/10.1093/molbev/msj124
+* Slack, K. E., Jones, C. M., Ando, T., Harrison, G. L., Fordyce, R. E., Arnason, U., Penny, D. (2006). Early penguin fossils, plus mitochondrial genomes, calibrate avian evolution. Molecular Biology and Evolution, 23, 1144–1155. https://doi.org/10.1093/molbev/msj124
 
-* Tenenhaus, A. & Guillemot, V. (2017). RGCCA: Regularized and sparse generalized canonical correlation analysis for multiblock data 2.1.2. https://CRAN.R-project.org/package=RGCCA.
+* Tenenhaus, A., Guillemot, V. (2017). RGCCA: Regularized and sparse generalized canonical correlation analysis for multiblock data 2.1.2. https://CRAN.R-project.org/package=RGCCA.
 
 &nbsp;
 &nbsp;
