--- a/vignettes/morphoBlocksMethods.Rmd
+++ b/vignettes/morphoBlocksMethods.Rmd
@@ -10,6 +10,7 @@ output:
     fig_caption: true
 vignette: >
   %\VignetteIndexEntry{Comparison between PCA and RCPCA using simulated data}
+  %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{here}
   %\VignetteDepends{kableExtra}
